# Horcrux

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  horcrux.cpp
src/HorcruxLib/: CMakeLists.txt  Horcrux.cpp  Horcrux.h  HorcruxAes.cpp  HorcruxAes.h  Utils.h  stdafx.h
src/HorcruxLib_Test/: CMakeLists.txt  HorcruxLib_Test.cpp
